// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoFilterButton renders filter button 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <TodoFilterButton
    setFilter={[MockFunction]}
  >
    <button
      className="filter-button filter-button-todo"
      onClick={[Function]}
    >
      To Do
    </button>
  </TodoFilterButton>
</Provider>
`;

exports[`TodoFilterButton renders filter button being selected 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <TodoFilterButton
    setFilter={[MockFunction]}
  >
    <button
      className="filter-button filter-button-todo filter-button-selected"
      onClick={[Function]}
    >
      To Do
    </button>
  </TodoFilterButton>
</Provider>
`;
